# where-did-it-all-go

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  README.md  docker-compose.example.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sitemap.xml
.github/workflows/: backend.yml  cross-cutting.yml  deploy.yml  docs.yml  frontend.yml  release.yml
admin/backup/: index.html
admin/emergency/: index.html
admin/overview/: index.html
admin/registration/: index.html
admin/smtp/: index.html
admin/users/: index.html
ai/local-models/: index.html
ai/privacy/: index.html
ai/providers/: index.html
ai/token-budgets/: index.html
apps/backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260502_0000_8a3f1c9e2b0d_initial_data_layer.py  20260503_0001_c4e9f2a8b1d6_households_and_auth.py  20260503_0002_e2f3a4b5c6d7_accounts.py  20260503_0003_a1b2c3d4e5f6_transactions.py  20260506_0004_f1e2d3c4b5a6_classification.py  20260506_0005_a2b3c4d5e6f7_recurrences.py  20260506_0005_b2c3d4e5f6a7_ingest.py  20260506_0006_a2b3c4d5e6f7_recurrences.py  20260506_0007_c1d2e3f4a5b6_recommendations.py  20260507_0008_d1e2f3a4b5c6_budgets.py  20260507_0009_e1f2a3b4c5d6_debts.py  20260507_0010_f1a2b3c4d5e6_goals.py  20260507_0011_a1b2c3d4e5f6_projections.py  20260507_0011_a4b5c6d7e8f9_projections.py  20260514_0012_b1c2d3e4f5a6_insights.py  20260514_0013_c3d4e5f6a7b8_audit_db_role_enforcement.py  20260517_0014_d4e5f6a7b8c9_auth_refresh_token_user_agent.py  20260518_0015_e5f6a7b8c9d0_admin.py  20260519_0015_e5f6a7b8c9d0_ingest_ui_additions.py  20260519_0016_f6a7b8c9d0e1_ingest_ui_additions.py  20260519_0017_3a7e9f2b1c4d_transaction_note.py  20260519_0017_a1b2c3d4e5f6_transaction_note.py  20260519_0018_5c8b2d4e7f1a_household_invitation.py  20260519_0018_b2c3d4e5f6a7_household_invitation.py  20260519_0019_a3b4c5d6e7f8_fx_multi_currency.py  20260521_0020_b4c5d6e7f8a9_smtp_tls_mode.py  20260523_0021_c5d6e7f8a9b0_budget_per_provider.py  20260524_0022_d6e7f8a9b0c1_user_avatar.py  20260524_0023_e7f8a9b0c1d2_tag_sort_order.py
apps/backend/app/: admin_cli.py  config.py  database.py  log_config.py  main.py
apps/backend/app/accounts/: README.md  __init__.py  deps.py  enums.py  models.py  router.py  schemas.py  service.py
apps/backend/app/admin/: __init__.py  deps.py  enums.py  jobs.py  middleware.py  models.py  router.py  schemas.py  service.py
apps/backend/app/audit/: README.md  __init__.py  deps.py  models.py  router.py  schemas.py  service.py
apps/backend/app/budgets/: README.md  __init__.py  deps.py  enums.py  jobs.py  models.py  router.py  schemas.py  service.py
apps/backend/app/classification/: README.md  __init__.py  deps.py  enums.py  models.py  router.py  schemas.py  service.py
apps/backend/app/debts/: README.md  __init__.py  deps.py  enums.py  jobs.py  models.py  router.py  schemas.py  service.py
apps/backend/app/goals/: README.md  __init__.py  deps.py  enums.py  jobs.py  models.py  router.py  schemas.py  service.py
apps/backend/app/households/: README.md  __init__.py  bootstrap.py  deps.py  enums.py  invitations.py  jobs.py  models.py  router.py  schemas.py  service.py  sse.py
apps/backend/app/ingest/: README.md  __init__.py  deps.py  enums.py  jobs.py  models.py  pipeline.py  router.py  schemas.py  service.py
apps/backend/app/ingest/parsers/: __init__.py  csv.py  ofx.py  simplefin.py
apps/backend/app/insights/: README.md  __init__.py  deps.py  enums.py  jobs.py  models.py  redaction.py  router.py  schemas.py  service.py
apps/backend/app/insights/providers/: __init__.py  anthropic.py  base.py  disabled.py  llamacpp.py  ollama.py  openai.py
apps/backend/app/platform/: README.md  __init__.py  app_state.py  db.py  events.py  fx.py  fx_jobs.py  ids.py  money.py  router.py  sse.py  time.py
apps/backend/app/projections/: README.md  __init__.py  deps.py  enums.py  jobs.py  models.py  router.py  schemas.py  service.py
apps/backend/app/recommendations/: README.md  __init__.py  deps.py  enums.py  jobs.py  models.py  router.py  schemas.py  service.py
apps/backend/app/recurrences/: README.md  __init__.py  deps.py  enums.py  jobs.py  models.py  router.py  schemas.py  service.py
apps/backend/app/security/: README.md  __init__.py  cookies.py  encryption.py  hooks.py  jwt.py  password.py  ratelimit.py  totp.py
apps/backend/app/security/plugins/: __init__.py  local.py  oidc.py
apps/backend/app/settings/: router.py
apps/backend/app/transactions/: README.md  __init__.py  deps.py  enums.py  models.py  router.py  schemas.py  service.py
apps/backend/app/worker/: fast.py  settings.py  slow.py
apps/backend/tests/: conftest.py  test_accounts.py  test_admin.py  test_audit.py  test_bootstrap.py  test_budgets.py  test_classification.py  test_cleanup_job.py  test_debts.py  test_fx.py  test_goals.py  test_households.py  test_ingest.py  test_insights.py  test_instance_info.py  test_invitations.py  test_platform.py  test_projections.py  test_recommendations.py  test_recurrences.py  test_registration_control.py  test_security.py  test_transaction_notes.py  test_transactions.py
apps/frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  orval.config.ts  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
changelog/: index.html
data/file-import/: index.html
data/freshness/: index.html
data/simplefin/: index.html
deploy/aio/: Caddyfile  Dockerfile  entrypoint.sh  pg_hba.conf  supervisord.conf
deployment/backup-restore/: index.html
deployment/configuration/: index.html
deployment/demo/: index.html
deployment/production/: index.html
deployment/reverse-proxy/: index.html
deployment/upgrading/: index.html
docs/: CNAME
docs/design/: DECISIONS.md
docs/site/: .gitignore  mkdocs.yml
faq/: index.html
features/accounts/: index.html
search/: search_index.json
stylesheets/: extra.css
(+160 files in other folders)
