[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "wdiag-backend"
version = "0.2.24"
description = "WDIAG — Where Did It All Go: personal finance backend"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Validation & settings
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "email-validator>=2.0",
    # Worker queue
    "arq>=0.26",
    "redis>=5.2",
    # Observability
    "structlog>=24.4",
    "prometheus-client>=0.21",
    # Security — established audited libraries only (see DECISIONS.md R5)
    "cryptography>=44.0",
    "authlib>=1.7.1",
    "joserfc>=1.6",
    "passlib[argon2]>=1.7",
    "pyotp>=2.9",
    "slowapi>=0.1.9",
    "pluggy>=1.5",
    # IDs
    "uuid-utils>=0.10",
    # CLI
    "click>=8.1",
    # Utilities
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "idna>=3.15",
    # Audit replay — RFC 6902 JSON Patch
    "jsonpatch>=1.32",
    # Admin — backup and email
    "boto3>=1.34",
    "aiosmtplib>=3.0",
    "starlette>=1.0.1",
]

[project.scripts]
wdiag-admin = "app.admin_cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5.0",
    "pytest-split>=0.9.0",
    "hypothesis>=6.122",
    "testcontainers[postgres,redis]>=4.9",
    "psycopg2-binary>=2.9",
    "polyfactory>=2.18",
    "time-machine>=2.16",
    "respx>=0.21",
    "pyright>=1.1.390",
    "ruff>=0.8",
    "types-passlib>=1.7",
    "import-linter>=2.1",
    "pip-audit>=2.7",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "N",        # pep8-naming
    "ANN",      # flake8-annotations
    "S",        # flake8-bandit (security)
    "RUF",      # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "S105", "S106"]
"alembic/**" = ["ANN", "N999"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pyright — strict mode
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["app"]
exclude = ["alembic/", "tests/", ".venv/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: requires running Postgres and Redis (testcontainers)",
]
filterwarnings = [
    # passlib uses deprecated crypt module (Python 3.13 removal) — upstream issue
    "ignore:'crypt' is deprecated:DeprecationWarning:passlib",
    # passlib accesses argon2.__version__ via deprecated API — upstream issue
    "ignore:Accessing argon2.__version__ is deprecated:DeprecationWarning:passlib",
    # testcontainers uses deprecated @wait_container_is_ready decorator — upstream issue
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/worker/fast.py", "app/worker/slow.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

# ---------------------------------------------------------------------------
# import-linter — module boundary enforcement
# See architecture.md: each module imports only from platform and its own
# submodules. Cross-module calls go through __init__.py / __all__.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["app"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Platform is the foundation layer — domain modules may not be imported by platform"
type = "forbidden"
source_modules = ["app.platform"]
forbidden_modules = [
    "app.accounts",
    "app.transactions",
    "app.ingest",
    "app.classification",
    "app.recurrences",
    "app.budgets",
    "app.debts",
    "app.goals",
    "app.projections",
    "app.recommendations",
    "app.insights",
    "app.audit",
    "app.households",
    "app.security",
]

[[tool.importlinter.contracts]]
name = "Security module must not import domain modules (except platform)"
type = "forbidden"
source_modules = ["app.security"]
forbidden_modules = [
    "app.accounts",
    "app.transactions",
    "app.ingest",
    "app.classification",
    "app.recurrences",
    "app.budgets",
    "app.debts",
    "app.goals",
    "app.projections",
    "app.recommendations",
    "app.insights",
    "app.audit",
    "app.households",
]

[[tool.importlinter.contracts]]
name = "Audit module must not import domain modules (except platform)"
type = "forbidden"
source_modules = ["app.audit"]
forbidden_modules = [
    "app.accounts",
    "app.transactions",
    "app.ingest",
    "app.classification",
    "app.recurrences",
    "app.budgets",
    "app.debts",
    "app.goals",
    "app.projections",
    "app.recommendations",
    "app.insights",
]

[[tool.importlinter.contracts]]
name = "Households module must not import other domain modules (except platform, audit, security)"
type = "forbidden"
source_modules = ["app.households"]
forbidden_modules = [
    "app.accounts",
    "app.transactions",
    "app.ingest",
    "app.classification",
    "app.recurrences",
    "app.budgets",
    "app.debts",
    "app.goals",
    "app.projections",
    "app.recommendations",
    "app.insights",
]

[[tool.importlinter.contracts]]
name = "Admin module must not import feature domain modules (only households, platform, audit, security)"
type = "forbidden"
source_modules = ["app.admin"]
forbidden_modules = [
    "app.accounts",
    "app.transactions",
    "app.ingest",
    "app.classification",
    "app.recurrences",
    "app.budgets",
    "app.debts",
    "app.goals",
    "app.projections",
    "app.recommendations",
    "app.insights",
]
